# Chess

./: CMakeLists.txt  ChessGame Project.sln  README.md
ChessGame Project/: Board.cpp  Board.h  BoardState.cpp  BoardState.h  Box.h  ChessGame Project.vcxproj  ChessGame Project.vcxproj.filters  Game.cpp  Game.h  Move.h  Piece.cpp  Piece.h  Window.cpp  Window.h  doxygen-config  main.cpp
ChessGame Project/Debug/: ChessGame Project.exe.recipe  vc142.idb
ChessGame Project/Debug/ChessGam.ba82f863.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ChessGame Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ChessGame Project/docs/html/: _board_8h.html  _board_8h_source.html  _box_8h_source.html  _game_8h.html  _game_8h_source.html  _move_8h_source.html  _piece_8cpp.html  _piece_8h_source.html  _window_8cpp.html  _window_8h.html  _window_8h_source.html  class_board.html  (+21 more)
Debug/: ChessGame Project.ilk
docs/html/: _board_8cpp.html  _board_state_8cpp.html  _board_state_8h.html  _board_state_8h_source.html  _box_8h.html  _game_8cpp.html  _move_8h.html  _piece_8h.html  annotated.html  class_bishop.html  class_board_state.html  class_game.html  class_knight.html  class_rook-members.html  class_window-members.html  classes.html  files.html  functions_func.html  functions_vars.html  globals_defs.html  index.html  main_8cpp.html  menudata.js  struct_box-members.html  struct_box.html  struct_move.html
src/: Board.cpp  BoardState.cpp  CMakeLists.txt  Game.cpp  Piece.cpp  Window.cpp  main.cpp
src/include/: Board.h  BoardState.h  Game.h
(+81 files in other folders)
